# agent-symphony

./: .gitignore  MANIFEST.md  OPENCLAW_INTEGRATION.md  PROTOCOL.md  README.md  README_en.md  SKILL.md  __init__.py  __main__.py  agent_symphony_cli.py  agent_symphony_openclaw.py  install.sh  pyproject.toml  run_jury_analysis.py  run_server.sh  test-openclaw-integration.py  test_debug_intent.py  test_dialog.py  test_intent_check.py  test_jury_agent.py  test_light.py  test_llm_direct.py  test_llm_plan.py  test_llm_quick.py  test_llm_raw.py  test_multiturn.py  test_openclaw.py  test_plan.py  test_quick.py  test_spawn.py  test_symphony.py  test_symphony_full.py  test_symphony_integration.py  test_symphony_live.py
server/: config.py  symphony_server.py
server/shared/: llm_provider.py
server/skills/: memory_skill.py  search_skill.py  team_skill.py  thinking_skill.py
shared/: context.py  registry.py
shared/shared/: __init__.py
skills/memory/: __init__.py  skill.py
skills/memory/memory/: SKILL.md  skill.py
skills/search/: SKILL.md  skill.py
skills/search/search/: __init__.py  skill.py
skills/team/: skill.py
skills/team/team/: SKILL.md  __init__.py  skill.py
skills/thinking/: SKILL.md  __init__.py  skill.py
symphony/: SKILL.md  handler.js
tests/: test_integration.py
